# atomicio-project

./: .gitignore  LICENSE  pyproject.toml  readme.md  test_concurrency.yaml
atomicio/: __init__.py  __main__.py  core.py  defaults.py  formats.py  version.py
tests/: test_async_safefile_basic.py  test_concurrency.py  test_coordinated_async.py  test_coordinated_threaded.py  test_core.py  test_defaults.py  test_edge_cases_catastrophic.py  test_formats.py  test_imports.py  test_safefile_basic.py  test_threaded_safefile_basic.py
